--- a/portfolio.html
+++ b/portfolio.html
@@ -41,20 +41,22 @@
 
 
     <div class="card" style="width: 18rem;"> <!-- top left project-->
-        <img class="card-img-top" src="Assets/Images/comingsoon.png" alt="Coming Soon!">
+        <img class="card-img-top" src="Assets/Images/Vanderbilt-1.png" alt="Travel Vanderbilt App">
         <div class="card-body">
-          <h5 class="card-title">Project 1</h5>
-          <p class="card-text">Project info coming soon.</p>
-          <a href="index.html" class="btn btn-primary">back to home</a>
+          <h5 class="card-title">Travel Vanderbilt</h5>
+          <p class="card-text">This website allows users to search for a city and loads top-rated restaurants from the Yelp API. The name, star rating, and phone number of each restaurant is added to the page along with an image from the Yelp profile and a link to the restaurant's Yelp listing.
+
+            The Algolia Places API autofills city names to help users search.</p>
+          <a href="https://github.com/heatherhern/Travel-Vanderbilt" class="btn btn-primary">View on GitHub</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;"> <!-- top right project -->
-        <img class="card-img-top" src="Assets/Images/comingsoon.png" alt="Coming Soon!">
+        <img class="card-img-top" src="Assets/Images/Weather-Dashboard.jpg" alt="Weather Dashboard">
         <div class="card-body">
-          <h5 class="card-title">Project 2</h5>
-          <p class="card-text">Project info coming soon.</p>
-          <a href="index.html" class="btn btn-primary">back to home</a>
+          <h5 class="card-title">Weather Dashboard</h5>
+          <p class="card-text">Use this app to find a current and five-day weather forecast in cities you search. The app will save recently-searched cities in local storage for easy access in the future.</p>
+          <a href="https://github.com/heatherhern/Weather-Dashboard" class="btn btn-primary">View on GitHub</a>
         </div>
       </div>
 
@@ -65,20 +67,22 @@
 <div class="row justify-content-around"> <!-- row 2 -->
 
     <div class="card" style="width: 18rem;"> <!-- bottom left project-->
-        <img class="card-img-top" src="Assets/Images/comingsoon.png" alt="Coming Soon!">
+        <img class="card-img-top" src="Assets/Images/Workday-Scheduler.jpg" alt="Workday Scheduler">
         <div class="card-body">
-          <h5 class="card-title">Project 3</h5>
-          <p class="card-text">Project info coming soon.</p>
-          <a href="index.html" class="btn btn-primary">back to home</a>
+          <h5 class="card-title">Workday Scheduler</h5>
+          <p class="card-text">A simple calendar app for scheduling your work day.</p>
+          <a href="https://github.com/heatherhern/workdayscheduler" class="btn btn-primary">View on GitHub</a>
         </div>
       </div>
 
       <div class="card" style="width: 18rem;"> <!-- bottom right project -->
-        <img class="card-img-top" src="Assets/Images/comingsoon.png" alt="Coming Soon!">
+        <img class="card-img-top" src="Assets/Images/Space-Quiz.png" alt="Space Quiz">
         <div class="card-body">
-          <h5 class="card-title">Project 4</h5>
-          <p class="card-text">Project info coming soon.</p>
-          <a href="index.html" class="btn btn-primary">back to home</a>
+          <h5 class="card-title">Space Quiz</h5>
+          <p class="card-text">This is a quiz to test your knowledge of some fun space facts!
+
+            Hit "start" to begin, take the quiz, and then save your high score with your initials!</p>
+          <a href="https://github.com/heatherhern/Space-Quiz-Final" class="btn btn-primary">View on GitHub</a>
         </div>
 
 
