Added portfolio download link

--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heather Newlin Portfolio Site</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Heather Newlin Portfolio Site</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+
+
+
 </head>
+
 <body>
-<div class="container"> <!-- container --> 
+  <div class="container">
+    <!-- container -->
 
-<!-- NEW nav bar --> 
+    <!-- NEW nav bar -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Heather Newlin</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Heather Newlin</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -27,54 +38,74 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
       </ul>
-    </div>
+  </div>
   </nav>
 
-<div class="container">
-<div class="jumbotron jumbotron-fluid"> <!-- Main header jumbotron --> 
-    <div class="container">
-      <h1 class="display-4">Welcome to My Portfolio Site</h1>
-    </div>
-</div>
   <div class="container">
-    <div class="row">
-      <div class="col-md-6"> <!-- profile image -->
-        <div class="card" style="width: 18rem;"> 
+    <div class="jumbotron jumbotron-fluid">
+      <!-- Main header jumbotron -->
+      <div class="container">
+        <h1 class="display-4">Welcome to My Portfolio Site</h1>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <!-- profile image -->
+          <div class="card" style="width: 18rem;">
             <img src="Assets/Images/profilephoto.jpg" class="card-img-top" alt="Heather Newlin Photo">
             <div class="card-body">
-              <p class="card-text">Hi! My name is Heather. I am a full stack developer based in Chattanooga, Tennessee. Check out my portfolio to see some of my recently-completed projects.</p>
+              <p class="card-text">Hi! My name is Heather. I am a full stack developer based in Chattanooga, Tennessee.
+                Check out my portfolio to see some of my recently-completed projects.<br></p>
+              <h3>Contact</h3><br>
+              <p>Email: <a href="mailto:heathernewlin1@gmail.com">heathernewlin1@gmail.com</a>
+              </p>
+              <p>Phone: <a href="tel:6154777223">615-477-7223</a></p>
+
               <a class="btn btn-primary" href="portfolio.html" role="button">View My Portfolio</a>
             </div>
           </div>
-      </div>
-      <div class="col-md-6"> <!-- right side image and body copy -->
-        <div class="row"> <!-- image row -->  
+        </div>
+        <div class="col-md-6">
+          <!-- right side image and body copy -->
+          <div class="row">
+            <!-- image row -->
             <img src="Assets/Images/codingphoto.jpg" class="img-fluid" alt="Coding on a laptop">
-        </div>
-        <div class="row"> <!-- text row --> 
-       <p>Want to get in touch?</p>
-        </div>
-       
-       <div class="row">
-       <a class="btn btn-primary" href="contact.html" role="button">Contact Me!</a>
-       </div>
-        </div>
+          </div>
+          <div class="row">
+            <!-- text row -->
+            <p>Want to get in touch?</p>
+          </div>
+
+          <div class="row">
+            <a class="btn btn-primary" href="contact.html" role="button">Contact Me!</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  </div>
 
-  <br /> 
+  <br />
 
   <div class="container">
-  <row>
+    <row>
       <p class="sticky-bottom">© Heather Newlin 2020</p>
- </div>
- </row>
+  </div>
+  </row>
 
-</div>
+  </div>
 
-</div> <!-- end of container --> 
+  </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
