Added download link to contact page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <p>Email: <a href="mailto:heathernewlin1@gmail.com">heathernewlin1@gmail.com</a>
               </p>
               <p>Phone: <a href="tel:6154777223">615-477-7223</a></p>
+              <p><a href="/Assets/pdf/Heather Hern Resume October 2020.pdf" download>Download My Resume</a></p>
 
               <a class="btn btn-primary" href="portfolio.html" role="button">View My Portfolio</a>
             </div>
