adding to heroku

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             image from the Yelp profile and a link to the restaurant's Yelp listing.
 
             The Algolia Places API autofills city names to help users search.</p>
-          <a href="https://github.com/heatherhern/Travel-Vanderbilt" class="btn btn-primary">View on GitHub</a>
+          <a href="https://github.com/heatherhern/Travel-Vanderbilt" class="btn btn-outline-secondary">View on GitHub</a>
         </div>
       </div>
 
@@ -70,7 +70,7 @@
           <h5 class="card-title">Weather Dashboard</h5>
           <p class="card-text">Use this app to find a current and five-day weather forecast in cities you search. The
             app will save recently-searched cities in local storage for easy access in the future.</p>
-          <a href="https://github.com/heatherhern/Weather-Dashboard" class="btn btn-primary">View on GitHub</a>
+          <a href="https://github.com/heatherhern/Weather-Dashboard" class="btn btn-outline-secondary">View on GitHub</a>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
         <div class="card-body">
           <h5 class="card-title">Workday Scheduler</h5>
           <p class="card-text">A simple calendar app for scheduling your work day.</p>
-          <a href="https://github.com/heatherhern/workdayscheduler" class="btn btn-primary">View on GitHub</a>
+          <a href="https://github.com/heatherhern/workdayscheduler" class="btn btn-outline-secondary">View on GitHub</a>
         </div>
       </div>
 
@@ -97,7 +97,7 @@
           <p class="card-text">This is a quiz to test your knowledge of some fun space facts!
 
             Hit "start" to begin, take the quiz, and then save your high score with your initials!</p>
-          <a href="https://github.com/heatherhern/Space-Quiz-Final" class="btn btn-primary">View on GitHub</a>
+          <a href="https://github.com/heatherhern/Space-Quiz-Final" class="btn btn-outline-secondary">View on GitHub</a>
         </div>
 
       </div> <!-- row 2 -->
@@ -112,7 +112,7 @@
           <div class="card-body">
             <h5 class="card-title">The Littlest Pet Shop</h5>
             <p class="card-text">A pet adoption search and save app.</p>
-            <a href="https://github.com/heatherhern/The-Littlest-Pet-Shop" class="btn btn-primary">View on GitHub</a>
+            <a href="https://github.com/heatherhern/The-Littlest-Pet-Shop" class="btn btn-outline-secondary">View on GitHub</a>
           </div>
         </div>
 
