--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
             </div>
             <br />
             <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-outline-secondary">Submit</button>
           </form>
 
 
