--- a/index.html
+++ b/index.html
@@ -53,18 +53,12 @@
       <div class="row">
         <div class="col-md-6">
           <!-- profile image -->
-          <div class="card" style="width: 18rem;">
+          <div class="card" id="portfolio-card" style="width: 18rem;">
             <img src="Assets/Images/profilephoto.jpg" class="card-img-top" alt="Heather Newlin Photo">
             <div class="card-body">
               <p class="card-text">Hi! My name is Heather. I am a full stack developer based in Chattanooga, Tennessee.
                 Check out my portfolio to see some of my recently-completed projects.<br></p>
-              <h3>Contact</h3><br>
-              <p>Email: <a href="mailto:heathernewlin1@gmail.com">heathernewlin1@gmail.com</a>
-              </p>
-              <p>Phone: <a href="tel:6154777223">615-477-7223</a></p>
-              <p><a href="/Assets/pdf/Heather Hern Resume October 2020.pdf" download>Download My Resume</a></p>
-
-              <a class="btn btn-primary" href="portfolio.html" role="button">View My Portfolio</a>
+              <a class="btn btn-outline-secondary" href="portfolio.html" role="button">View My Portfolio</a>
             </div>
           </div>
         </div>
@@ -72,7 +66,7 @@
           <!-- right side image and body copy -->
           <div class="row">
             <!-- image row -->
-            <img src="Assets/Images/codingphoto.jpg" class="img-fluid" alt="Coding on a laptop">
+            <img src="Assets/Images/codingphoto.jpg" class="img-fluid" id="home-photo" alt="Coding on a laptop">
           </div>
           <div class="row">
             <!-- text row -->
@@ -80,7 +74,7 @@
           </div>
 
           <div class="row">
-            <a class="btn btn-primary" href="contact.html" role="button">Contact Me!</a>
+            <a class="btn btn-outline-secondary" href="contact.html" role="button">Contact Me!</a>
           </div>
         </div>
       </div>
